cmake_minimum_required(VERSION 2.8)

project(template)

add_executable(template src/template.cpp)
add_executable(template2 src/template2.cpp)
add_executable(template3 src/template3.cpp)
add_executable(template4 src/template4.cpp)
add_executable(template5 src/template5.cpp)
add_executable(class_template src/class_template.cpp)
add_executable(template_exercise src/template_exercise.cpp)
